--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   
   <title>webpage</title>
-  <link rel="stylesheet" href="./index_files/main.css">
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
 
