--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </div>
 
    <div class="imageHolder">
-  <img src="./index_files/gif_1.gif" alt="">
+  <img src="gif_1.gif" alt="">
   <div class="caption"><br><h4>Elysium: Music for Music Lovers</h4>
     <p>Discover our page. Dive into the tracks of our life, steps in into today with music on your mind.</p><br>
     <button class="button">LET'S GO</button></div>
